--- a/auth/TODO
+++ b/auth/TODO
@@ -2,6 +2,8 @@
 - Could you push the entity update on the db branch? To avoid too much different versions … our git is a mess theres multiple versions of everything in different branches
 - merge with franco db after update!
 - when changing pseudo remeber to check if it doesnt exist yet and add number (e.g ltouret -> ltouret1)
-- for the cookies the browser stores em, and when the user goes to our webpage /chat if there r jwt cookies and they r correct the guard will let him through, else he will get a wtf u doin bitch error or redirect to the index)
 - change route into async and other funcs
 - check & add missing dtos
+- erase useless imports
+
+- add jwt in websockets
