--- a/backend/TODO
+++ b/backend/TODO
@@ -9,5 +9,8 @@
 - match history
 - stats (such as: wins and losses, ladder level, achievements, and so forth)
 - add jwt in websockets
-- add 2FA
 - use same dockefile as rest with .env
+- Could you create a func getFriends(User) in the user service? check if works.
+- if an user is already logged with valid jwt we could check for them b4 trying to log in with 42 api, and let them through?
+- erase test_users in auth_svc
+- create TokenPayload dto for strategies auth & ws.
