--- a/backend/TODO
+++ b/backend/TODO
@@ -11,24 +11,17 @@ General:
 Auth:
     erase auto_login in auth controller. 
     erase test_users in auth_svc
-    when signup is called avatar should not be 42 img, but the no-avatar.jpg aka the stormtrooper -> check again
     add returns to routes
     so 42 should redirect to backend but backend should the redirect to home or 2FA page -> after login redirect to 127.0.0.1:3000/ (frontend) if logged in, if 2fa the  redirect to 2fa page of frontend
-    should not return 2fa secret when returning user 
-
-Jwt:
-    add jwt-spec-guard in branch leoV1.1, then merge
 
 2FA:
     stop using response in 2fa service & controller, and fix turn-on & off (await and return types)
 
 Users:
-    Decide if use userID as parameter or user directly to funcs. In all update funcs, in 2FA.
-    change show in user controller to serve avatar of backend.
     when changing pseudo remember to check if it doesnt exist yet and return error -> talk with paul about return object
     add friends (online, offline, in a game, and so forth), add status in db.
     delete friends
     match history
     stats (such as: wins and losses, ladder level, achievements, and so forth)
     Could you create a func getFriends(User) in the user service? check if works -> wait for Franco
-    should not return 2fa secret when returning user 
+    erase entity in user email, password
